--- a/rv7fl_path_planner_moveit/package.xml
+++ b/rv7fl_path_planner_moveit/package.xml
@@ -51,7 +51,7 @@
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>eigen</build_depend>
   <build_depend>geometric_shapes</build_depend>
-  <build_depend>geometry_msgs</build_depend>
+  <!--build_depend>geometry_msgs</build_depend-->
   <build_depend>interactive_markers</build_depend>
   <build_depend>moveit_core</build_depend>
   <build_depend>moveit_msgs</build_depend>
@@ -62,9 +62,14 @@
   <build_depend>pcl_ros</build_depend>
   <build_depend>pluginlib</build_depend>
   <build_depend>roscpp</build_depend>
-  <build_depend>rospy</build_depend>
-  <build_export_depend>eigen</build_export_depend>
-  <build_export_depend>geometric_shapes</build_export_depend>
+	<build_depend>rospy</build_depend>
+	<!--[IMAN] NEW ADDITION-->
+	<build_depend>tf2_ros</build_depend>
+	<build_depend>tf2_eigen</build_depend>
+	<build_depend>tf2_geometry_msgs</build_depend>
+  <build_depend>moveit_ros_planning</build_depend>	
+	<build_export_depend>eigen</build_export_depend>
+  <!--build_export_depend>geometric_shapes</build_export_depend-->
   <build_export_depend>geometry_msgs</build_export_depend>
   <build_export_depend>interactive_markers</build_export_depend>
   <build_export_depend>moveit_core</build_export_depend>
@@ -77,9 +82,17 @@
   <build_export_depend>pluginlib</build_export_depend>
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>rospy</build_export_depend>
-  <exec_depend>eigen</exec_depend>
+
+	<!--[IMAN] Add this to see if it can be build on the 
+			 newer Moveit in Kinetic (and coming ROS distro)-->
+	<build_export_depend>tf2_ros</build_export_depend>
+	<build_export_depend>tf2_eigen</build_export_depend>
+	<build_export_depend>tf2_geometry_msgs</build_export_depend>
+	<build_export_depend>moveit_ros_planning</build_export_depend>
+
+	<exec_depend>eigen</exec_depend>
   <exec_depend>geometric_shapes</exec_depend>
-  <exec_depend>geometry_msgs</exec_depend>
+  <!--exec_depend>geometry_msgs</exec_depend-->
   <exec_depend>interactive_markers</exec_depend>
   <exec_depend>moveit_core</exec_depend>
   <exec_depend>moveit_msgs</exec_depend>
@@ -91,7 +104,11 @@
   <exec_depend>pluginlib</exec_depend>
   <exec_depend>roscpp</exec_depend>
   <exec_depend>rospy</exec_depend>
-
+	
+	<exec_depend>tf2_ros</exec_depend>
+	<exec_depend>tf2_eigen</exec_depend>
+	<exec_depend>tf2_geometry_msgs</exec_depend>
+	<exec_depend>moveit_ros_planning</exec_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
