Add pipeline fix and new files to change planner configuration

--- a/rv7fr_dh_floor/config/fake_controllers.yaml
+++ b/rv7fr_dh_floor/config/fake_controllers.yaml
@@ -7,7 +7,6 @@ controller_list:
       - joint4
       - joint5
       - joint6
-
-initial:
+initial:  # Define initial robot poses.
   - group: arm
     pose: zero_position
