--- a/rv7fr_dh_floor/config/chomp_planning.yaml
+++ b/rv7fr_dh_floor/config/chomp_planning.yaml
@@ -1,4 +1,4 @@
-planning_time_limit: 1.0
+planning_time_limit: 10.0
 max_iterations: 200
 max_iterations_after_collision_free: 5
 smoothness_cost_weight: 0.1
@@ -25,4 +25,5 @@ random_jump_amount: 1.0
 use_stochastic_descent: true
 enable_failure_recovery: false
 max_recovery_attempts: 5
-trajectory_initialization_method: "quintic-spline"
+trajectory_initialization_method: "fillTrajectory" # [fillTrajectory, quintic-spline] fillTrajectory is for ompl-chomp or any post-processing
+
