--- a/rv7fr_dh_floor/config/stomp_planning.yaml
+++ b/rv7fr_dh_floor/config/stomp_planning.yaml
@@ -6,12 +6,12 @@ stomp/arm:
     num_iterations_after_valid: 0
     num_rollouts: 30
     max_rollouts: 30
-    initialization_method: 1 #[1 : LINEAR_INTERPOLATION, 2 : CUBIC_POLYNOMIAL, 3 : MININUM_CONTROL_COST]
+    initialization_method: 1 #[1 : LINEAR_INTERPOLATION, 2 : CUBIC_POLYNOMIAL, 3 : MININUM_CONTROL_COST, 4: FILL_TRAJECTORY]
     control_cost_weight: 0.0
   task:
     noise_generator:
       - class: stomp_moveit/NormalDistributionSampling
-        stddev: [0.05, 0.8, 1.0, 0.8, 0.4, 0.4, 0.4]
+        stddev: [0.05, 0.8, 1.0, 0.8, 0.4, 0.4] #For group joint
     cost_functions:
       - class: stomp_moveit/CollisionCheck
         collision_penalty: 1.0
